--- a/app/templates/ranking.html
+++ b/app/templates/ranking.html
@@ -30,6 +30,7 @@
 
     <!-- サイドメニュー -->
     <nav id="side-menu">
+        <a href="/ranking">ランキング</a>
         <a href="/profile/{{ current_user.id }}">マイページ</a>
         <a href="/calendar">開催日程表</a>
         <a href="/logout">ログアウト</a>
