--- a/app/templates/delete_user.html
+++ b/app/templates/delete_user.html
@@ -5,7 +5,7 @@
 <h1>ユーザ削除ページ</h1>
 名前：{{user.name}}<br>
 <h3>本当に削除しますか？</h3>
-<form action="{{ url_for('delete_user', id=user.id) }}" method="POST" style="display:inline;">
+<form action="{{ url_for('main.delete_user', id=user.id) }}" method="POST" style="display:inline;">
     <button type="submit">削除</button>
 </form>
 <button onclick="window.location.href='/ranking'">戻る</button>
