--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -70,7 +70,7 @@
                         <td>{{ ticket.category }}</td>
                         <td>{{ ticket.value }}</td>
                         <td>
-                            <form action="{{ url_for('delete_ticket', id=ticket.id) }}" method="POST">
+                            <form action="{{ url_for('main.delete_ticket', id=ticket.id) }}" method="POST">
                                 <button class=""danger-btn type="submit">削除</button>
                             </form>
                         </td>
