--- a/app/templates/ranking_card2.html
+++ b/app/templates/ranking_card2.html
@@ -63,7 +63,7 @@
                         <th>{{ user.station }}</th>
                         <th>{{ user.fare }}</th>
                         <th>
-                            <form action="{{ url_for('delete_user', id=user.id) }}" method="GET" style="display:inline;">
+                            <form action="{{ url_for('main.delete_user', id=user.id) }}" method="GET" style="display:inline;">
                                 <button type="submit">削除</button>
                             </form>
                         </th>
