--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,14 +2,20 @@
 {% block title %}ログインページ{% endblock %}
 
 {% block content %}
-<h1>ログイン</h1>
-<form method="POST">
-    <label for="username">ユーザー名</label>
-    <input type="text" id="username" name="username" required>
-    <br>
-    <label for="pw">パスワード</label>
-    <input type="pw" id="pw" name="pw" required>
-    <br>
-    <button type="submit">ログイン</button>
-</form>
+<div class="login-container">
+    <div class="login-card">
+        <h1>ログイン</h1>
+        <form method="POST">
+            <div class="form-group">
+                <label for="username">ユーザー名</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="pw">パスワード</label>
+                <input type="password" id="pw" name="pw" required>
+            </div>
+            <button type="submit" class="login-button">ログイン</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
